fixed issue with initial values not showing when popup opens

--- a/src/popup/menu.css
+++ b/src/popup/menu.css
@@ -21,3 +21,8 @@
 * {
   font-family: 'Inter', sans-serif;
 }
+
+#root {
+  padding: 16px;
+  width: 256px;
+}
